k8s/immich/base/immich-cache.yaml
# PERSISTENT VOLUME =========================================
---
# IMMICH CACHE ====
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-cache
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-cache
  template:
    metadata:
      labels:
        app: immich-cache
    spec:
      containers: # TODO
        - name: immich-valkey
          image: "docker.io/valkey/valkey:9.0-alpine3.22"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: valkeydata
              mountPath: /data
          resources: {}
          command: ["valkey-server"]
          args: ["--save", "60 1", "--loglevel", "warning", "--appendonly", "yes"]
      volumes:
        - name: valkeydata
          persistentVolumeClaim:
            claimName: immich-cache
---
kind: Service
apiVersion: v1
metadata:
  name: immich-cache
  namespace: immich
  labels:
    app: immich-cache
spec:
  type: ClusterIP
  selector:
    app: immich-cache
  ports:
    - name: tcp-redis
      port: 6379
      targetPort: 6379
      protocol: TCP
